wrl almost working

--- a/QtPurchasingExample.vcxproj
+++ b/QtPurchasingExample.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClCompile Include="Test\main.cpp" />
     <ClCompile Include="Test\microsoftshop.cpp" />
+    <ClCompile Include="Test\mylogger.cpp" />
     <ClCompile Include="Test\shopmanager.cpp" />
     <ClCompile Include="Test\window.cpp" />
   </ItemGroup>
@@ -45,10 +46,26 @@
   <ItemGroup>
     <QtUic Include="Test\window.ui" />
   </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="Test\mylogger.h">
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.\output\GeneratedFiles\$(PlatformName)\moc_%(Filename).cpp</OutputFile>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.;$(QTDIR)\include;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;.\output\GeneratedFiles\$(PlatformName)\.;.\output\GeneratedFiles</IncludePath>
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\output\GeneratedFiles\$(PlatformName)\moc_%(Filename).cpp</OutputFile>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.;$(QTDIR)\include;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;.\output\GeneratedFiles\$(PlatformName)\.;.\output\GeneratedFiles</IncludePath>
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\output\GeneratedFiles\$(PlatformName)\moc_%(Filename).cpp</OutputFile>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.;$(QTDIR)\include;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;.\output\GeneratedFiles\$(PlatformName)\.;.\output\GeneratedFiles</IncludePath>
+      <OutputFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\output\GeneratedFiles\$(PlatformName)\moc_%(Filename).cpp</OutputFile>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.;$(QTDIR)\include;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets;.\output\GeneratedFiles\$(PlatformName)\.;.\output\GeneratedFiles</IncludePath>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{B12702AD-ABFB-343A-A199-8E24837244A3}</ProjectGuid>
     <Keyword>Qt4VSv1.0</Keyword>
     <WindowsTargetPlatformVersion>10.0.17763.0</WindowsTargetPlatformVersion>
+	<CppWinRTEnabled>true</CppWinRTEnabled>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
