--- a/QtPurchasingExample.vcxproj.filters
+++ b/QtPurchasingExample.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClCompile Include="Test\microsoftshop.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Test\mylogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Test\window.h">
@@ -40,10 +43,18 @@
     <QtMoc Include="Test\microsoftshop.h">
       <Filter>Source Files</Filter>
     </QtMoc>
+    <QtMoc Include="Test\mylogger.h">
+      <Filter>Source Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Test\window.ui">
       <Filter>Source Files</Filter>
     </QtUic>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="vector.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
